<resources>
    <string name="app_name">PocketBus</string>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_login">登录</string>
    <string name="title_activity_bus_detail">公交线路详情</string>

    <string name="splash_text">Pocket\nBus</string>

    <string name="main_search_text">搜索公交线路，车站，地点</string>
    <string name="road_from">从</string>
    <string name="road_to">到</string>
    <string name="road_search">查路线</string>
    <string name="road_my_location">我的位置</string>
    <string name="road_destination">输入终点</string>
    <string name="no_result">对不起，没有搜索到相关数据！</string>
    <string name="text_bus_line_map">地图</string>

    <string name="hint_login_username">用户名</string>
    <string name="hint_login_password">密码</string>

    <string name="item_mine_collect">收藏</string>
    <string name="item_mine_setting">系统设置</string>
    <string name="item_mine_about">关于</string>
</resources>
