<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="路线查询"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:gravity="center"
            android:padding="@dimen/padding_medium"
            android:textColor="@color/white"
            android:text="@string/road_search"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:padding="@dimen/padding_medium">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/exchange_point"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/toolbar_height">

                <TextView
                    android:id="@+id/start_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/margin_medium"
                    android:layout_marginStart="@dimen/margin_medium"
                    android:text="@string/road_from"
                    android:textColor="@color/text_blue"
                    android:textSize="15sp" />

                <LinearLayout
                    android:id="@+id/enter_start"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_toEndOf="@+id/start_location"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    android:padding="@dimen/padding_small">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/padding_medium"
                        android:text="@string/road_my_location"
                        android:textColor="@color/white"
                        android:textSize="16sp" />
                </LinearLayout>
            </RelativeLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp_line"
                android:background="@color/white" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/toolbar_height"
                android:background="@color/colorPrimary">

                <TextView
                    android:id="@+id/end_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/margin_medium"
                    android:layout_marginStart="@dimen/margin_medium"
                    android:text="@string/road_to"
                    android:textColor="@color/text_blue"
                    android:textSize="15sp" />

                <LinearLayout
                    android:id="@+id/enter_end"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/end_location"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    android:padding="@dimen/padding_small">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/padding_medium"
                        android:text="@string/road_destination"
                        android:textColor="@color/white"
                        android:textSize="16sp" />
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>

        <ImageView
            android:id="@+id/exchange_point"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:padding="@dimen/padding_medium"
            android:src="@drawable/ic_exchange" />
    </RelativeLayout>
</LinearLayout>