<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_gray"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/padding_container">

        <LinearLayout
            android:id="@+id/unlogin_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:visibility="visible">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="92dp"
                android:layout_height="92dp"
                android:src="@mipmap/user_default_icon"
                app:civ_border_color="@color/PrimaryLight"
                app:civ_border_width="4dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:text="登录/注册"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:visibility="gone">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/login_pic"
                android:layout_width="92dp"
                android:layout_height="92dp"
                android:src="@mipmap/user_default_icon"
                app:civ_border_color="@color/PrimaryLight"
                app:civ_border_width="4dp" />

            <TextView
                android:id="@+id/login_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:text=" "
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/blank_item_divider"
            android:background="@color/background_gray" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/px_line"
            android:background="@color/border_gray" />

        <RelativeLayout
            android:id="@+id/collection"
            android:layout_width="match_parent"
            android:layout_height="@dimen/personal_item_height"
            android:background="@drawable/selector_white"
            android:padding="@dimen/padding_large">

            <ImageView
                android:id="@+id/mine_ic1"
                android:layout_width="@dimen/icon_normal_icon"
                android:layout_height="@dimen/icon_normal_icon"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:src="@drawable/ic_collection" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/margin_medium"
                android:layout_marginStart="@dimen/margin_medium"
                android:layout_toEndOf="@+id/mine_ic1"
                android:layout_toRightOf="@+id/mine_ic1"
                android:text="@string/item_mine_collect"
                android:textColor="@color/textPrimaryDark"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="@dimen/icon_normal_icon"
                android:layout_height="@dimen/icon_normal_icon"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:src="@drawable/forward_arrow" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/px_line"
            android:background="@color/border_gray" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/blank_item_divider"
            android:background="@color/background_gray" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/px_line"
            android:background="@color/border_gray" />

        <RelativeLayout
            android:id="@+id/setting"
            android:layout_width="match_parent"
            android:layout_height="@dimen/personal_item_height"
            android:background="@drawable/selector_white"
            android:padding="@dimen/padding_large">

            <ImageView
                android:id="@+id/mine_ic2"
                android:layout_width="@dimen/icon_normal_icon"
                android:layout_height="@dimen/icon_normal_icon"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:src="@drawable/ic_setting" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/margin_medium"
                android:layout_marginStart="@dimen/margin_medium"
                android:layout_toEndOf="@+id/mine_ic2"
                android:layout_toRightOf="@+id/mine_ic2"
                android:text="@string/item_mine_setting"
                android:textColor="@color/textPrimaryDark"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="@dimen/icon_normal_icon"
                android:layout_height="@dimen/icon_normal_icon"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:src="@drawable/forward_arrow" />
        </RelativeLayout>

        <View
            android:id="@+id/view3"
            android:layout_width="match_parent"
            android:layout_height="@dimen/px_line"
            android:background="@color/border_gray" />

        <RelativeLayout
            android:id="@+id/about"
            android:layout_width="match_parent"
            android:layout_height="@dimen/personal_item_height"
            android:background="@drawable/selector_white"
            android:padding="@dimen/padding_large">

            <ImageView
                android:id="@+id/mine_ic3"
                android:layout_width="@dimen/icon_normal_icon"
                android:layout_height="@dimen/icon_normal_icon"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:src="@drawable/ic_about" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/margin_medium"
                android:layout_marginStart="@dimen/margin_medium"
                android:layout_toEndOf="@+id/mine_ic3"
                android:layout_toRightOf="@+id/mine_ic3"
                android:text="@string/item_mine_about"
                android:textColor="@color/textPrimaryDark"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="@dimen/icon_normal_icon"
                android:layout_height="@dimen/icon_normal_icon"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:src="@drawable/forward_arrow" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/px_line"
            android:background="@color/border_gray" />
    </LinearLayout>
</LinearLayout>